Make sure compactor is run with proper jvm options