@@ -1,12 +1,12 @@
 #!/bin/sh
-if [ -z "$MAVEN_OPTS" ]; then
-    MAVEN_OPTS='-Xmx28g -d64 -server -Djava.awt.headless=true -XX:+UseConcMarkSweepGC'
+if [ -z "$COMPACTOR_OPTS" ]; then
+    COMPACTOR_OPTS='-Xmx22g -d64 -server -Djava.awt.headless=true -XX:+UseConcMarkSweepGC -XX:+AggressiveOpts'
 fi
 
 if [ ! -z "$ENABLE_YOURKIT" ]; then
-    MAVEN_OPTS="$MAVEN_OPTS -agentlib:yjpagent"
+    COMPACTOR_OPTS="$MAVEN_OPTS -agentlib:yjpagent"
 fi
 
+echo "Set COMPACTOR_OPTS to pass jvm parameters. Currently is set to: $COMPACTOR_OPTS"
 
-echo "Set MAVEN_OPTS to pass jvm parameters. Currently is set to: $MAVEN_OPTS"
-mvn exec:java -Dexec.args="$*"
+mvn exec:exec -Dexec.executable="java" -Dexec.classpathScope=runtime -Dexec.args="-cp %classpath $COMPACTOR_OPTS com.moviepilot.sheldon.compactor.main.Main $*"
